# hoi4-ai-modding-kit

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: README.zh-CN.md  hoi4-country-state-formulas.md  index.html  project-spec.md  setup.md  site.css  syntax-quick-reference.md
skills/hoi4-modding/: SKILL.md
skills/hoi4-modding/agents/: openai.yaml
skills/hoi4-modding/references/: content-bundles.md  country-state-formulas.md  debugging.md  folder-map.md
src/hoi4_ai_modding/: __init__.py  __main__.py  cli.py  core.py  mcp_server.py
tools/: install_codex_integration.ps1
